fixbug h4 font-size too small

--- a/src/components/content/css/mainContent.css
+++ b/src/components/content/css/mainContent.css
@@ -84,6 +84,10 @@
   font-weight: bold;
 }
 
+.content-main-content h4.h4_Custom {
+  font-size: var(--h4-font-size);
+}
+
 .content-right-side {
   position: inherit;
   width: 154px;
